[package]
name = "lpr_proxy"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
required-features = ["structopt", "reqwest"]

[[bin]]
name = "server"
required-features = ["warp", "tokio/stream", "tempfile", "tokio/process"]

[dependencies]
structopt = { version = "0.3.15", optional = true }
reqwest = { version = "0.10.6", optional = true }

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"

tokio = { version = "0.2.21", features = ["macros", "rt-core", "fs"] }

anyhow = "1.0.31"

warp = { version = "0.2.3", optional = true }
tempfile = { version = "3.1", optional = true }
